Commit all files after gulp config

--- a/src/templates/template.html
+++ b/src/templates/template.html
@@ -6,10 +6,51 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title><!-- build:title --></title>
     <link rel="icon" type="image/png" href="i/favicon.png">
-    <link rel="stylesheet" href="">
+    <link rel="stylesheet" href="c/main.css">
 </head>
 <body>
+    <div id="preloader"></div>
+
+    <!--Header-->
+    <header>
+    <nav class="navbar navbar-expand-md navbar-dark bg-dark justify-content-center">
+        <a href="index.html" id="logo">
+            <img src="i/theme/logo-1-1.png" class="main-logo" alt="Rosec Security Solution - CCTV Cameras &amp; Alarm Systems">
+            <p>Rosec</p>
+            <p class="logo-slogan">Security Solutions</p>
+        </a>
+        <ul class="navbar-nav">
+            <li class="nav-item active">
+                <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" href="#">Link</a>
+            </li>
+            <li class="nav-item dropdown">
+                <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                    Dropdown
+                </a>
+                <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+                    <a class="dropdown-item" href="#">Action</a>
+                    <a class="dropdown-item" href="#">Another action</a>
+                    <div class="dropdown-divider"></div>
+                    <a class="dropdown-item" href="#">Something else here</a>
+                </div>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link disabled" href="#">Disabled</a>
+            </li>
+        </ul>
+    </nav>
+    </header>
+
+
+
+
     <div id="content"><!-- build:content --></div>
     <div id="footer">_________________________</div>
+
+    <!--Scripts-->
+    <script type="text/javascript" src="j/main.js"></script>
 </body>
 </html>
