update for package-json.lock vulnaribalities

--- a/src/sass/_custom_variables.scss
+++ b/src/sass/_custom_variables.scss
@@ -1,24 +1,19 @@
 //VARIABLES
 /* A collection of Bootstrap and Custom that can be edited to change the overall theme colors and sizes.
-Bootstrap variables are overwritten. To see a list of Bootstrap variables see node_modules/bootstrap/scss/_variables.scss */
+Bootstrap variables are overwritten. To see a list of Bootstrap variables see node_modules/bootstrap/scss/_custom_variables.scss */
 
 //BOOTSTRAP//
+//Global//
+$font-family-base:            Montserrat; //Change the default theme font
+$gray-800:                    #161827; //change the default dark nav color
+//navbar header//
+$navbar-padding-y:            0.3rem; //Set the navbar height
 
 
-//navbar header
+
 
 //CUSTOM variables
 
-$font_types:                        ( primary: Montserrat );
-$navbar-padding-y:                  2.5rem !default;
-$navbar-padding-x:                  5rem !default;
 
-.navbar-nav { position: relative; }
-.navbar-nav #logo {
-  background-color: #ff5910;
-  padding: 15px 40px;
-  position: absolute;
-  left: -259px;
-  top: -8px;
-  text-decoration: none;
-}
+
+
