--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -1,47 +1,44 @@
-//Import Bootstrap
-@import "node_modules/bootstrap/scss/bootstrap";
 //Import your deault font
 @import url('https://fonts.googleapis.com/css?family=Montserrat&display=swap');
+//Import variables - always load this before bootstrap otherwise variables won't be overwritten
+@import "custom_variables";
+//Import Bootstrap
+@import "node_modules/bootstrap/scss/bootstrap";
 
-//Variables
-$font_types: ( primary: Montserrat );
+
 
 body {
-  font-family: map_get($font_types, primary);
 
-  #preloader {
-    position: fixed;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    z-index: 9999;
-    background-color: #fff;
-    background-image: url(../i/theme/preloader.gif);
-    background-repeat: no-repeat;
-    background-position: center center;
-  }
+
+  #preloader { position: fixed; top: 0; left: 0; width: 100%; height: 100%; z-index: 9999; background-color: #fff; background-image: url(../i/theme/preloader.gif); background-repeat: no-repeat; background-position: center center; }
 }
 
-.navbar #logo {
-  background-color: #ff5910;
-  padding: 15px 46px;
-}
-
-.navbar #logo img {
-  display: block;
-  margin: 0 auto;
-}
-
-.navbar #logo p {
-  font-size: 2.5rem;
-  color: #ffffff;
-  text-align: center;
-  padding: 10px 0 0 0;
-}
-
-.navbar #logo p:nth-child(3) {
-  font-size: 1rem;
-  padding: 0;
-  margin: 0;
-}
+//.navbar-nav { position: relative; }
+//.navbar-nav #logo {
+//  background-color: #ff5910;
+//  padding: 15px 40px;
+//  position: absolute;
+//  left: -259px;
+//  top: -8px;
+//  text-decoration: none;
+//}
+//
+//.navbar-nav #logo img {
+//  display: block;
+//  margin: 0 auto;
+//}
+//
+//.navbar-nav #logo p {
+//  font-size: 2rem;
+//  color: #ffffff;
+//  text-align: center;
+//  padding: 10px 0 0 0;
+//}
+//
+//.navbar-nav #logo p:nth-child(3) {
+//  font-size: 1rem;
+//  padding: 0;
+//  margin: 0;
+//}
+//
+//nav .breadcrumb { margin-left: -136px; min-height: 135px; font-size: 2.1rem; padding-top: 39px; }
